Fix: Reduce Gap above Drafts and Content Page

--- a/src/components/CreatorPage/Main/MainComponents/Table.scss
+++ b/src/components/CreatorPage/Main/MainComponents/Table.scss
@@ -2,7 +2,7 @@
 
 .Table {
   padding: 3rem 1rem 0rem 2rem;
-  max-height: 75.5%;
+  height: 82vh;
   background: #000000;
   border-radius: 12px 12px 0px 0px;
   box-shadow: inset 0px 4px 20px rgba(170, 170, 170, 0.25);
@@ -51,7 +51,7 @@
     }
   }
   &__content-list {
-    max-height: 60vh;
+    max-height: 70vh;
     scroll-behavior: smooth;
     overflow-y: auto;
   }
