--- a/src/components/CreatorPage/Main/MainComponents/TableDraft.scss
+++ b/src/components/CreatorPage/Main/MainComponents/TableDraft.scss
@@ -2,7 +2,7 @@
 
 .TableDraft {
     padding: 3rem 1rem 0rem 2rem;
-    max-height: 75.5%;
+    height: 82vh;
     background: $color2;
     border-radius: 12px 12px 0px 0px;
     box-shadow: inset 0px 4px 20px rgba(170, 170, 170, 0.25);
@@ -60,7 +60,7 @@
     }
 
     &__content-list {
-        max-height: 60vh;
+        max-height: 70vh;
         scroll-behavior: smooth;
         overflow-y: auto;
     }
